--- a/web/Home_Page/home_page.css
+++ b/web/Home_Page/home_page.css
@@ -23,18 +23,34 @@ header {
 /* BUTTON STYLES */
 
 /* inactive button */
-.button {
+.nav-button {
 	color: #374962;
 }
 
 /* hover button */
-.button:hover {
+.nav-button:hover {
 	color: #243753;
 }
 
 /* active button */
 .active {
     color: #21324C;
+}
+
+.button {
+	background-color: #BA4A67;
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin-right: 10px;
+}
+
+.button:hover {
+	background-color: #AA445E;
 }
 
 .label {
