--- a/web/Shopping_Cart/main.css
+++ b/web/Shopping_Cart/main.css
@@ -106,4 +106,10 @@ body {
     width: 120px;
     height: auto; }
   
+img {
+    width: 400px;
+    height: auto;
+}
+
+
 /*# sourceMappingURL=main.css.map */
