--- a/web/RateMyLoo/main.css
+++ b/web/RateMyLoo/main.css
@@ -1,9 +1,6 @@
 .login_form {
+  margin-top: 2em;
   align-items: center;
-}
-
-nav {
-  margin-bottom: 2em;
 }
 
 /*# sourceMappingURL=main.css.map */
