--- a/web/RateMyLoo/main.scss
+++ b/web/RateMyLoo/main.scss
@@ -8,3 +8,8 @@
     margin-top: 2em;
     align-items: center;
 }
+
+.jumbotron {
+    background-image: url("photos/out_house.jpg");
+    background-size: cover;
+}
