--- a/web/RateMyLoo/main.scss
+++ b/web/RateMyLoo/main.scss
@@ -15,7 +15,8 @@
     height: 100vh;
 
     .container {
-        background-image: linear-gradient(to right top, #e3ffa6, #c0de7f, #9dbe5a, #7b9f34, #598100);
-        opacity: 0.5;
+        background-color: white;
+        opacity: 0.75;
+        border-radius: 3px;
     }
 }
