--- a/web/RateMyLoo/main.scss
+++ b/web/RateMyLoo/main.scss
@@ -16,7 +16,8 @@
 
     .container {
         background-color: white;
-        opacity: 0.75;
-        border-radius: 3px;
+        overflow: hidden;
+        opacity: 0.8;
+        border-radius: 4px;
     }
 }
