--- a/web/RateMyLoo/main.css
+++ b/web/RateMyLoo/main.css
@@ -4,7 +4,7 @@
 }
 
 .jumbotron {
-  background-image: url("photos/out_house.jpg") fixed center no-repeat;
+  background-image: url("photos/out_house.jpg");
   background-size: cover;
   height: 100vh;
 }
