--- a/web/RateMyLoo/main.scss
+++ b/web/RateMyLoo/main.scss
@@ -10,7 +10,7 @@
 }
 
 .jumbotron {
-    background-image: url("photos/out_house.jpg") fixed center no-repeat;
+    background-image: url("photos/out_house.jpg");
     background-size: cover;
     height: 100vh;
 
