--- a/web/RateMyLoo/main.css
+++ b/web/RateMyLoo/main.css
@@ -1,3 +1,9 @@
+#passwordError {
+  color: lightcoral;
+  font-size: 12;
+  align-self: center;
+}
+
 .login_form {
   margin-top: 2em;
   align-items: center;
