--- a/web/RateMyLoo/main.scss
+++ b/web/RateMyLoo/main.scss
@@ -2,7 +2,11 @@
 
 
 
-
+#passwordError {
+    color: lightcoral;
+    font-size: 12;
+    align-self: center;
+}
 
 .login_form {
     margin-top: 2em;
